<resources>
    <string name="app_name">DataApp</string>
    <string name="fullnames">FullNames</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign in here</string>
    <string name="login">Login</string>
    <string name="need_an_account_sign_up_here">Need An Account?Sign up here</string>
    <string name="settings">Settings</string>
    <string name="about_developer">About Developer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="graph_fragment">Graph Fragment</string>
    <string name="datafragment">DataFragment</string>
    <string name="logout">Logout</string>
    <string name="profile_image">Profile Image</string>

</resources>